# AiCommiter

./: .coverage  .gitignore  agents.md  pyproject.toml  terminal.txt
aicommit/: ai.py  cli.py  config.py  exceptions.py  git.py  models.py  ui.py
tests/: conftest.py  test_ai.py  test_cli.py  test_config.py  test_git.py  test_ui.py
