[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicommit"
version = "0.1.0"
description = "AI-powered git commit message generator using OpenRouter"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
aicommit = "aicommit.cli:_entry_point"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
